--- a/signuppage.css
+++ b/signuppage.css
@@ -1,4 +1,9 @@
+html{
+    overflow-x:hidden;
+}
+
 body{
+     overflow-x:hidden;
     padding: 0;
     margin: 100px 150px;
     box-sizing: border-box;
@@ -342,6 +347,9 @@ span{
     }
 
 @media screen and (min-width: 320px) and (max-width: 1200px) {
+    html{
+         overflow-x:hidden;
+    }
     body {
         margin: 20px; 
         overflow-x: hidden;
