--- a/signin.css
+++ b/signin.css
@@ -1,3 +1,7 @@
+html{
+     overflow-x:hidden;
+}
+
 body{
     padding: 0;
     margin: 0;
@@ -100,6 +104,10 @@ form p{
 }
 
 @media screen and (min-width: 320px) and (max-width: 1200px) {
+    html, body{
+         overflow-x:hidden;
+    }
+    
     body {
         padding: 0;
         margin: 0;
@@ -115,14 +123,14 @@ form p{
     }
     
     .sign-in {
-        width: 100%; /* Use full width for smaller screens */
-        text-align: center; /* Center content */
+        width: 100%; 
+        text-align: center; 
         margin-top: 30px;
-        /* margin-bottom: auto; */
+       
         margin-left: 0;
         margin-right: auto;
         padding: 20px; 
-      /* Add padding for spacing */
+      
         /* box-shadow: 0px 0px 10px rgba(195, 195, 195, 0.2); */
     }
     
@@ -130,43 +138,43 @@ form p{
         display: flex;
         flex-direction: column;
         gap: 15px;
-        width: 100%; /* Use full width for smaller screens */
+        width: 100%; 
         
     }
     
     .sign-in form h3 {
         text-align: center;
         font-weight: bolder;
-        font-size: 32px; /* Adjust font size for smaller screens */
+        font-size: 32px;
         margin-bottom: 20px;
     }
     
     form p {
         margin-top: 0;
-        font-size: 16px; /* Adjust font size for smaller screens */
-        width: 100%; /* Use full width for smaller screens */
-        text-align: center; /* Center text */
+        font-size: 16px; 
+        width: 100%; 
+        text-align: center;
         margin-left: 0;
     }
     
     #email, #password {
         width:  85%; 
-        height: 48px; /* Adjust height for smaller screens */
+        height: 48px; 
     }
     
     #submit {
         margin-top: 15px;
-        padding: 12px; /* Adjust padding for smaller screens */
-        width: 100px; /* Adjust width for smaller screens */
+        padding: 12px; 
+        width: 100px; 
         margin-left: 150px;
-        margin-right: auto; /* Center the button */
+        margin-right: auto; 
         margin-bottom: 0;
     }
     
     .sign-in-alt {
         margin-top: 20px;
-        width: 100%; /* Use full width for smaller screens */
-        text-align: center; /* Center content */
+        width: 100%; 
+        text-align: center; 
     }
     
     .sign-in-alt a {
